--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
 <body>
   <div class="container">
     <!-- Replace the src below with your actual logo image URL or file path -->
-    <img src="https://via.placeholder.com/120?text=Logo" alt="Fleura Co Logo" class="logo" />
+    <img src="Black%20Circle%20Modern%20Nails%20Studio%20Logo.png" alt="Fleura Co Logo" class="logo" />
+
 
     <h1>Fleura Co</h1>
 
