--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="p:domain_verify" content="8321ea95439865f74f0ee4a55a1aca4d" />
   <title>Fleura Co</title>
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
 
-    /* Reset and base */
+  <!-- Google Fonts -->
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+Display:wght@400&family=Poppins:wght@600&family=The+Seasons&display=swap');
+  </style>
+
+  <style>
     body, html {
       margin: 0; padding: 0; height: 100%;
       font-family: 'Poppins', sans-serif;
-      background-color: #f9f6f1; /* whitish beige */
+      background-color: #f9f6f1;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -21,7 +24,7 @@
 
     .container {
       background: white;
-      border: 3px solid #000; /* black frame */
+      border: 3px solid #000;
       border-radius: 12px;
       padding: 40px 30px;
       width: 350px;
@@ -40,11 +43,20 @@
     }
 
     h1 {
-      margin: 0 0 25px 0;
-      font-weight: 600;
+      margin: 0 0 10px 0;
+      font-family: 'The Seasons', serif;
       font-size: 2.5rem;
+      font-weight: 600;
       color: #000;
       letter-spacing: 2px;
+    }
+
+    .subheading {
+      font-family: 'Noto Serif Display', serif;
+      font-size: 1rem;
+      color: #555;
+      margin-bottom: 25px;
+      letter-spacing: 1px;
     }
 
     .buttons {
@@ -68,7 +80,6 @@
       background-color: #444;
     }
 
-    /* Responsive */
     @media (max-width: 400px) {
       .container {
         padding: 30px 20px;
@@ -76,6 +87,9 @@
       }
       h1 {
         font-size: 2rem;
+      }
+      .subheading {
+        font-size: 0.9rem;
       }
       .btn {
         font-size: 1rem;
@@ -89,20 +103,23 @@
     }
   </style>
 </head>
+
 <body>
   <div class="container">
-    <!-- Replace the src below with your actual logo image URL or file path -->
+    <!-- Replace with your actual logo path or URL -->
     <img src="Black%20Circle%20Modern%20Nails%20Studio%20Logo.png" alt="Fleura Co Logo" class="logo" />
 
-
     <h1>Fleura Co</h1>
+    <p class="subheading">Notion Planners | Organisation | Productivity</p>
 
     <div class="buttons">
       <a href="https://fleuraco.gumroad.com/" class="btn" target="_blank" rel="noopener">Shop Notion Templates</a>
       <a href="https://fleuraco.substack.com/" class="btn" target="_blank" rel="noopener">Newsletter / Blog</a>
       <a href="https://instagram.com/yourprofile" class="btn" target="_blank" rel="noopener">Instagram</a>
       <a href="https://au.pinterest.com/fleuracodigitals/" class="btn" target="_blank" rel="noopener">Pinterest</a>
+      <a href="products.html" class="btn">Free Notion Templates</a> <!-- Link to new page -->
     </div>
   </div>
 </body>
 </html>
+
