--- a/product.html
+++ b/product.html
@@ -18,7 +18,7 @@
     }
 
     .container {
-      max-width: 700px;
+      max-width: 1200px;
       margin: 0 auto;
       background: white;
       border: 3px solid #000;
@@ -67,6 +67,12 @@
       width: 100%;
       height: 2px;
       background-color: #000;
+    }
+
+    .product-container {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+      gap: 20px;
     }
 
     .product {
@@ -123,22 +129,27 @@
       <a href="product.html" class="active">Free Notion Templates</a>
     </div>
 
-    <!-- Example Product -->
-    <div class="product">
-      <img src="weekly planner.png" alt="Weekly Planner" />
-      <h2>Aesthetic Weekly Planner</h2>
-      <p>This free Notion template helps you plan your week in a simple, aesthetic layout.</p>
-      <a href="https://fleuraco.gumroad.com/l/zngecl?layout=profile" class="btn" target="_blank">Download Template</a>
-    </div>
+    <div class="product-container">
+      <!-- Product 1 -->
+      <div class="product">
+        <img src="weekly-planner.png" alt="Weekly Planner" />
+        <h2>Aesthetic Weekly Planner</h2>
+        <p>This free Notion template helps you plan your week in a simple, aesthetic layout.</p>
+        <a href="https://fleuraco.gumroad.com/l/zngecl?layout=profile" class="btn" target="_blank">Download Template</a>
+      </div>
 
-    <!-- Duplicate this section for more products -->
-    <div class="product">
-      <img src="weekly reset.png" alt="Weekly Reset" />
-      <h2>Weekly reset</h2>
-      <p>Track your habits and stay consistent with this weekly routine and checklist.</p>
-      <a href="https://fleuraco.gumroad.com/l/dfadc?layout=profile" class="btn" target="_blank">Download Template</a>
+      <!-- Product 2 -->
+      <div class="product">
+        <img src="weekly-reset.png" alt="Weekly Reset" />
+        <h2>Aesthetic Weekly Reset</h2>
+        <p>Track your habits and stay consistent with this weekly routine and checklist.</p>
+        <a href="https://fleuraco.gumroad.com/l/dfadc?layout=profile" class="btn" target="_blank">Download Template</a>
+      </div>
+
+      <!-- Add more products as needed -->
     </div>
   </div>
 </body>
 </html>
+
 
