--- a/product.html
+++ b/product.html
@@ -7,9 +7,7 @@
 
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Noto+Serif+Display:wght@400&family=The+Seasons&display=swap');
-  </style>
 
-  <style>
     body {
       font-family: 'Inter', sans-serif;
       margin: 0;
@@ -27,11 +25,24 @@
       box-shadow: 0 4px 12px rgba(0,0,0,0.08);
     }
 
+    .header {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 15px;
+      margin-bottom: 30px;
+    }
+
+    .header img {
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+    }
+
     h1 {
       font-family: 'The Seasons', serif;
       font-size: 2.5rem;
-      text-align: center;
-      margin-bottom: 10px;
+      margin: 0;
     }
 
     .subheading {
@@ -121,7 +132,10 @@
 
 <body>
   <div class="container">
-    <h1>Free Notion Templates</h1>
+    <div class="header">
+      <img src="Black Circle Modern Nails Studio Logo.png" alt="Fleura Co Logo" />
+      <h1>Fleura Co</h1>
+    </div>
     <p class="subheading">Curated templates to help you stay organised</p>
 
     <div class="nav">
@@ -141,7 +155,7 @@
       <!-- Product 2 -->
       <div class="product">
         <img src="weekly-reset.png" alt="Weekly Reset" />
-        <h2>Aesthetic Weekly Reset</h2>
+        <h2>Weekly Reset</h2>
         <p>Track your habits and stay consistent with this weekly routine and checklist.</p>
         <a href="https://fleuraco.gumroad.com/l/dfadc?layout=profile" class="btn" target="_blank">Download Template</a>
       </div>
@@ -151,5 +165,6 @@
   </div>
 </body>
 </html>
+
 
 
