--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
   <title>Fleura Co</title>
 
   <!-- Google Fonts -->
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Noto+Serif+Display:wght@400&family=The+Seasons&display=swap');
-  </style>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Noto+Serif+Display:wght@400&family=The+Seasons&display=swap" rel="stylesheet" />
 
   <style>
     body, html {
@@ -17,7 +15,7 @@
       padding: 0;
       height: 100%;
       font-family: 'Inter', sans-serif;
-      background-image: url('background.jpg'); /* Replace with your actual image path */
+      background-image: url('background.jpg');
       background-size: cover;
       background-position: center;
       background-attachment: fixed;
@@ -28,7 +26,7 @@
     }
 
     .container {
-      background: rgba(255, 255, 255, 0.9); /* Semi-transparent white */
+      background: rgba(255, 255, 255, 0.9);
       border: 3px solid #000;
       border-radius: 12px;
       padding: 50px 40px;
@@ -161,3 +159,4 @@
   </div>
 </body>
 </html>
+
