--- a/product.html
+++ b/product.html
@@ -69,7 +69,7 @@
       display: flex;
       justify-content: center;
       gap: 30px;
-      margin-bottom: 40px;
+      margin-bottom: 30px;
       border-bottom: 1px solid #ddd;
       padding-bottom: 10px;
     }
@@ -159,6 +159,7 @@
       <img src="Black Circle Modern Nails Studio Logo.png" alt="Fleura Co Logo" />
       <h1>Fleura Co</h1>
     </div>
+
     <p class="subheading">Curated templates to help you stay organised</p>
 
     <div class="nav">
@@ -166,8 +167,15 @@
       <a href="product.html" class="active">Free Notion Templates</a>
     </div>
 
-   
+    <div class="product">
+      <img src="weekly-reset.png" alt="Weekly Reset Template">
+      <h2>Weekly Reset Planner</h2>
+      <p>Download this free Notion template to plan your week, reset your space, and stay mindful with an easy self-care aesthetic layout.</p>
+    </div>
 
-
-
-
+    <div class="kit-embed">
+      <iframe src="https://fleura-co.kit.com/01a505a79f" title="Freebie Email Form – Weekly Reset"></iframe>
+    </div>
+  </div>
+</body>
+</html>
