--- a/product.html
+++ b/product.html
@@ -12,22 +12,17 @@
     body, html {
       margin: 0;
       padding: 0;
-      height: 100%;
       font-family: 'Inter', sans-serif;
       background-image: url('background.jpg');
       background-size: cover;
       background-position: center;
       background-attachment: fixed;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
     }
 
     .container {
-      max-width: 420px;
-      width: 95vw;
-      margin: 0 auto;
+      max-width: 680px;
+      width: 90vw;
+      margin: 60px auto;
       background: rgba(255, 255, 255, 0.9);
       border: 3px solid #000;
       border-radius: 12px;
@@ -35,6 +30,12 @@
       box-sizing: border-box;
       box-shadow: 0 4px 12px rgba(0,0,0,0.08);
       text-align: center;
+      animation: scaleIn 0.5s ease-in-out;
+    }
+
+    @keyframes scaleIn {
+      from { transform: scale(0.95); opacity: 0; }
+      to { transform: scale(1); opacity: 1; }
     }
 
     .header {
@@ -69,9 +70,10 @@
       display: flex;
       justify-content: center;
       gap: 30px;
-      margin-bottom: 30px;
+      margin-bottom: 40px;
       border-bottom: 1px solid #ddd;
       padding-bottom: 10px;
+      position: relative;
     }
 
     .nav a {
@@ -80,16 +82,26 @@
       font-weight: 500;
       position: relative;
       padding-bottom: 5px;
+      transition: color 0.3s ease;
     }
 
-    .nav a.active::after {
+    .nav a::after {
       content: "";
       position: absolute;
       bottom: 0;
       left: 0;
-      width: 100%;
       height: 2px;
+      width: 0%;
       background-color: #000;
+      transition: width 0.3s ease;
+    }
+
+    .nav a:hover::after {
+      width: 100%;
+    }
+
+    .nav a.active::after {
+      width: 100%;
     }
 
     .product {
@@ -109,7 +121,7 @@
     }
 
     .product p {
-      margin: 0 0 15px;
+      margin: 0 0 20px;
       color: #444;
       font-size: 1rem;
       font-family: 'Inter', sans-serif;
@@ -119,7 +131,7 @@
       border: 1px solid #ccc;
       border-radius: 10px;
       overflow: hidden;
-      height: 600px;
+      height: 450px; /* Reduced height so form is visible */
       max-width: 100%;
     }
 
@@ -129,19 +141,12 @@
       border: none;
     }
 
-    @media (max-width: 400px) {
+    @media (max-width: 480px) {
       .container {
         padding: 30px 20px;
-        width: 90vw;
       }
       h1 {
         font-size: 2rem;
-      }
-      .subheading {
-        font-size: 0.9rem;
-      }
-      .nav {
-        gap: 20px;
       }
       .product h2 {
         font-size: 1.4rem;
@@ -179,3 +184,4 @@
   </div>
 </body>
 </html>
+
