--- a/product.html
+++ b/product.html
@@ -12,25 +12,42 @@
     body, html {
       margin: 0;
       padding: 0;
+      height: 100%;
       font-family: 'Inter', sans-serif;
       background-image: url('background.jpg');
       background-size: cover;
       background-position: center;
       background-attachment: fixed;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       min-height: 100vh;
     }
 
     .container {
-      max-width: 860px;
+      display: flex;
+      flex-direction: column;
+      max-width: 960px;
       width: 95vw;
-      margin: 60px auto;
-      background: rgba(255, 255, 255, 0.9);
+      margin: 0 auto;
+      background: rgba(255, 255, 255, 0.95);
       border: 3px solid #000;
       border-radius: 12px;
       padding: 50px 40px;
       box-sizing: border-box;
       box-shadow: 0 4px 12px rgba(0,0,0,0.08);
       text-align: center;
+      animation: fadeGrow 0.6s ease-out;
+      opacity: 0;
+      transform: scale(0.95);
+      animation-fill-mode: forwards;
+    }
+
+    @keyframes fadeGrow {
+      to {
+        opacity: 1;
+        transform: scale(1);
+      }
     }
 
     .header {
@@ -76,48 +93,44 @@
       font-weight: 500;
       position: relative;
       padding-bottom: 5px;
-      transition: color 0.3s ease;
     }
 
-    .nav a::after {
+    .nav a.active::after,
+    .nav a:hover::after {
       content: "";
       position: absolute;
       bottom: 0;
       left: 0;
+      width: 100%;
       height: 2px;
-      width: 0%;
       background-color: #000;
-      transition: width 0.3s ease;
-    }
-
-    .nav a:hover::after {
-      width: 100%;
-    }
-
-    .nav a.active::after {
-      width: 100%;
+      transition: all 0.3s ease;
     }
 
     .kit-embed {
+      width: 100%;
+      height: 800px; /* Adjusted for full Kit page */
+      border: 1px solid #ccc;
       border-radius: 10px;
       overflow: hidden;
-      height: 580px; /* Adjust height as needed */
-      width: 100%;
-      max-width: 100%;
+      margin-top: 20px;
     }
 
-    iframe {
+    .kit-embed iframe {
       width: 100%;
       height: 100%;
       border: none;
     }
 
-    @media (max-width: 480px) {
+    @media (max-width: 768px) {
       .container {
         padding: 30px 20px;
       }
       h1 {
         font-size: 2rem;
+      }
+      .subheading {
+        font-size: 0.9rem;
       }
       .nav {
         gap: 20px;
@@ -140,6 +153,7 @@
       <a href="product.html" class="active">Free Notion Templates</a>
     </div>
 
+    <!-- Kit Embed Form -->
     <div class="kit-embed">
       <iframe 
         src="https://fleura-co.kit.com/01a505a79f" 
@@ -150,6 +164,7 @@
   </div>
 </body>
 </html>
+
 
 
 
