--- a/product.html
+++ b/product.html
@@ -167,7 +167,8 @@
     <p class="subheading">soft productivity • digital systems • intentional living</p>
 
     <div class="nav">
-      <a href="https://fleuradigitals-dot.github.io/fleuraco-site/index.html">Home</a>
+      <!-- ✅ FIXED LINK -->
+      <a href="https://fleuracodigitals-dot.github.io/fleuraco-site/">Home</a>
       <a href="product.html" class="active">Free Templates</a>
     </div>
 
@@ -189,7 +190,7 @@
       ></iframe>
     </div>
 
-    <!-- Optional Substack Embed -->
+    <!-- Substack Embed -->
     <iframe class="substack-embed" 
       src="https://fleuraco.substack.com/embed" 
       title="Subscribe to Fleura Co Newsletter"
@@ -200,5 +201,6 @@
   </div>
 </body>
 </html>
+
 
 
