--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     </p>
 
     <div class="buttons">
-      <a href="https://fleuraco.gumroad.com/" class="btn" target="_blank" rel="noopener">🛍 Shop Templates</a>
+      <a href="https://fleuraco.gumroad.com/" class="btn" target="_blank" rel="noopener">🛍 Template Library</a>
       <a href="https://fleuraco.substack.com/" class="btn" target="_blank" rel="noopener">💌 Substack Reads</a>
       <a href="https://www.instagram.com/fleuracodigitals/" class="btn" target="_blank" rel="noopener">📸 Instagram</a>
       <a href="https://au.pinterest.com/fleuracodigitals/" class="btn" target="_blank" rel="noopener">📌 Pinterest</a>
